# orcTerm

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/orcterm/ui/: IconResourceTest.java  TerminalThemeConfigUiTest.java  ThemeRepositoryTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ssh_bridge.c
app/src/main/java/com/orcterm/: OrcTermApplication.java
app/src/main/java/com/orcterm/data/: AppDatabase.java  (+4 more)
app/src/main/keystores/: release
app/src/main/res/drawable/: bg_status_indicator.xml  circle_bg.xml  circle_outline_bg.xml  circular_progress_bar.xml  ic_action_add.xml  ic_action_appearance.xml  ic_action_archive.xml  ic_action_check.xml  ic_action_close.xml  ic_action_cloud_download.xml  ic_action_cloud_upload.xml  ic_action_computer.xml  ic_action_content_copy.xml  ic_action_content_cut.xml  ic_action_content_paste.xml  ic_action_dns.xml  ic_action_folder.xml  ic_action_format_size.xml  ic_action_grid.xml  ic_action_image.xml  ic_action_import_export.xml  ic_action_insert_drive_file.xml  ic_action_keyboard.xml  ic_action_language.xml  ic_action_link.xml  ic_action_link_off.xml  ic_action_lock.xml  ic_action_memory.xml  ic_action_play_arrow.xml  ic_action_refresh.xml  ic_action_security.xml  ic_action_settings.xml  ic_action_stop.xml  ic_action_storage.xml  ic_action_terminal.xml  ic_action_unarchive.xml  ic_action_view_list.xml  ic_action_vpn_key.xml  ic_arrow_right.xml  ic_dashboard_container.xml  (+36 more)
app/src/main/res/layout/: activity_add_host.xml  activity_docker.xml  activity_docker_container_detail.xml  activity_docker_logs.xml  activity_editor.xml  activity_host_detail.xml  activity_main.xml  activity_media_preview.xml  activity_monitor.xml  activity_process_detail.xml  activity_settings_detail.xml  activity_sftp.xml  activity_ssh_terminal.xml  activity_terminal.xml  fragment_files.xml  fragment_host_picker.xml  fragment_servers.xml  fragment_settings.xml  fragment_terminal.xml  fragment_theme_config.xml  item_autocomplete_suggestion.xml  item_container.xml  item_dashboard_card.xml  item_file.xml  item_file_grid.xml  item_host.xml  item_image.xml  item_network.xml  item_session.xml  item_setting.xml  item_volume.xml  item_widget_host.xml  view_empty_state.xml  widget_hosts.xml  widget_server_status.xml
app/src/main/res/menu/: bottom_nav_menu.xml  menu_editor.xml  menu_main.xml  menu_selection.xml  sftp_menu.xml  sftp_selection_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles_settings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: widget_hosts_info.xml  widget_server_info.xml
docs/: ALL_DOCS.md  BUILD_SYSTEM.md  IMPLEMENTATION_GUIDE.md  PROJECT_ANALYSIS_REPORT.md  QR_CODE_SHARING_FEATURE.md  QR_DEBUG_GUIDE.md  README.md  README_LIBS.md
docs/backups/terminal_legacy_2026-02-19/: README.md
docs/backups/terminal_legacy_2026-02-19/java/core/terminal/: TerminalSession.java
docs/backups/terminal_legacy_2026-02-19/java/ui/: TerminalActivity.java
docs/backups/terminal_legacy_2026-02-19/java/ui/widget/: TerminalView.java
docs/backups/terminal_legacy_2026-02-19/res/layout/: fragment_terminal.xml
docs/scripts/: build_libs.sh  build_libssh2_android_ndk.sh  build_libssh2_macos.sh  debug_deps.ps1  install_deps_final.ps1  setup_deps.ps1  setup_orcterm.sh
scripts/: build_release.ps1  build_release.sh  generate_keystore.ps1  generate_keystore.sh
sshlib/: build.gradle
sshlib/src/main/cpp/: CMakeLists.txt  ssh_bridge.c
terminal_backup/2026-01-30/: TerminalFragment.java  TerminalView.java  activity_terminal.xml  fragment_terminal.xml
terminal_backup/2026-02-01/: AddHostActivity.java  activity_add_host.xml
(+75 files in other folders)
